--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.gamevault">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!-- Scoped Storage permissions for Android 10 e acima -->
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
+
+    <!-- Permissão para acesso à internet -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".MyApp"
@@ -17,6 +21,14 @@
         android:theme="@style/Theme.GameVault"
         tools:targetApi="31">
 
+        <!-- Main Activity -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.GameVault.NoActionBar" />
+
+        <!-- Login Activity -->
         <activity
             android:name=".login.Login"
             android:exported="true">
@@ -26,20 +38,22 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.GameVault.NoActionBar" />
-
+        <!-- Register Activity -->
         <activity
             android:name=".login.Register"
             android:exported="true" />
 
+        <!-- UCrop Activity -->
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-    </application>
 
+        <!-- AddReview Activity -->
+        <activity
+            android:name=".ui.AddReviewActivity"
+            android:exported="false" />
+
+        <!-- Outros fragments ou atividades conforme necessário -->
+    </application>
 </manifest>
